<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">移动学习系统</string>
    <string name="home_page">主页</string>
    <string name="down_up_btn_show" translatable="false">com.sunshinexu.mobilelearn.utils.behavior.BottomNavigationBehavior</string>
    <string name="knowledge">知识体系</string>
    <string name="navigation">学习导航</string>
    <string name="public_num">公众号</string>
    <string name="project">项目</string>
    <string name="login">登录</string>
    <string name="please_login">未登录，请先登录</string>
    <string name="nav_item_my_collect">我的收藏</string>
    <string name="nav_item_set">设置</string>
    <string name="nav_item_about">关于我们</string>
    <string name="nav_item_logout">注销</string>
    <string name="open_drawer">打开</string>
    <string name="close_drawer">关闭</string>

    <!--item-->
    <string name="article_up">置顶</string>

    <!-- collect -->
    <string name="collect">收藏</string>
    <string name="cancel_collect">已取消收藏</string>
    <string name="failed_to_get_collect_list">获取收藏文章失败</string>
    <string name="failed_to_cancel_collect">取消收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failed">收藏失败</string>
    <!--article-->
    <string name="failed_to_get_article">获取文章列表网络异常，请重试</string>
    <string name="failed_to_get_banner">获取首页推广栏内容失败</string>
    <string name="failed_to_share_failed">分享文章失败</string>


    <string name="share_type_url" translatable="false">%1$sShare【%2$s】special top：%3$s</string>

    <!--menu-->
    <string name="item_collect">收藏</string>
    <string name="item_share">分享</string>
    <string name="item_open_browser">其他浏览器打开</string>

    <!--publicNum-->
    <string name="failed_to_get_public_num">获取公众号列表失败</string>
    <string name="failed_to_get_personal_public_num">获取个人公众号文章失败</string>

    <!--konwledge-->
    <string name="failed_to_get_knowledge">获取知识体系列表失败</string>

    <!--project-->
    <string name="failed_to_get_project">获取项目分类失败</string>
    <string name="failed_to_get_project_list">获取项目列表失败</string>

    <!--navigation-->
    <string name="failed_to_get_navigation_data">获取知识导航失败</string>
    <string name="tv_login_title">欢迎来到移动开发学习系统</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册？</string>
    <string name="confirm_register">注册</string>
    <string name="back_login">登录？</string>
    <string name="login_protocol">登录代表您已同意《移动学习用户协议》</string>
    <string name="register_protocol">注册代表您已同意《移动学习用户协议》</string>
    <string name="username_not_empty">用户名不能为空，请重新输入</string>
    <string name="password_not_empty">密码不能为空，请重新输入</string>
    <string name="failed_to_login">登录失败，请重新登录</string>
    <string name="logining">正在登录...</string>
    <string name="confirm_password">请再次输入密码</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="twice_password_not_same">两次输入的密码不一致，请重新输入！</string>
    <string name="failed_to_register">注册失败，请重新注册！</string>
    <string name="register_success">注册成功</string>
    <string name="failed_to_logout">注销失败，请重试！</string>

    <string name="cache_set">缓存设置</string>
    <string name="clear_cache">清空缓存</string>
    <string name="set">设置</string>
    <string name="app_version">Version V1.0</string>
    <string name="about_version">检查新版本</string>
    <string name="about_website">常用网站</string>
    <string name="about_suggest">意见反馈</string>
    <string name="search">搜索</string>
    <string name="use_website">常用网站</string>
    <string name="failed_to_get_website_data">获取通用网站栏失败</string>
    <string name="action_search">请输入搜索内容</string>
    <string name="search_more">搜索</string>
    <string name="hot_search">热搜</string>
    <string name="clear_all">清空</string>
    <string name="history_search">搜索历史</string>
    <string name="search_hint">快去搜索更多内容~</string>
    <string name="failed_to_get_hot_data">查看热门数据失败</string>
    <string name="login_success">登录成功</string>
    <string name="welcome">欢迎</string>
    <string name="study">一起学 Android</string>
    <string name="logout_success">您的账号已退出</string>
    <string name="loading">正在加载中...</string>
    <string name="loading_data">正在加载...</string>
    <string name="http_error">网络异常</string>
    <string name="double_click_exit_toast">再按一次退出</string>
    <string name="welcome_word">欢迎来到移动开发学习系统</string>


</resources>
