<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/item_login"
            android:title="@string/login"
            android:icon="@drawable/ic_login">
        </item>

        <item
            android:id="@+id/item_collect"
            android:title="@string/nav_item_my_collect"
            android:icon="@drawable/ic_collect2">
        </item>

        <item
            android:id="@+id/item_set"
            android:title="@string/nav_item_set"
            android:icon="@drawable/ic_set">
        </item>


        <item
            android:id="@+id/item_logout"
            android:title="@string/nav_item_logout"
            android:icon="@drawable/ic_logout">
        </item>


        <item
            android:id="@+id/item_about"
            android:title="@string/nav_item_about"
            android:icon="@drawable/ic_about">
        </item>


    </group>

</menu>